# mango

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
examples/: demo_async_executor.cc  demo_caller.cc  demo_executor.cc  demo_message.h
include/: async_executor.h  async_executor_builder.h  builder.h  caller.h  caller_builder.h  context.h  director.h  executor.h  executor_builder.h  message.h  message_creator.h  pack.h  session.h  session_manager.h  shared_control.h  util.h
src/: async_executor.cc  caller.cc  executor.cc  message.cc  message_creator.cc  session.cc  session_manager.cc  shared_control.cc  util.cc
tests/: CMakeLists.txt
tests/integration/: test_async_ipc.cc  test_async_rpc.cc  test_async_rpc6.cc  test_ipc.cc  test_rpc.cc  test_rpc6.cc
tests/unit/: test_message.cc  test_session.cc  test_util.cc
